entity classes and repositories done for car and member + unit testing

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,10 @@
     <title>Cars 'R' Us Backend</title>
 </head>
 <body>
-   <h2>Backend for the Cars 'R' Us project</h2>
+<div style="text-align: center">
+    <h2>Cars 'R' Us project <i>early stages</i></h2>
+    <p><i>Made by Jens Legarth Ryge</i></p>
+</div>
+
 </body>
 </html>
